tests/frontend/pass/modules_nested/main.vx
fn main() -> i32 {
  let ops = comptime {
    import("tests/frontend/pass/modules_nested/ops.ak");
  };

  let result = ops.do_ops(5.5, 3.5);
  return 0;
}
